# CPPCS

./: CMakeLists.txt  README.md
src/numerical_methods/: Exercise_01.cpp  Exercise_02.cpp
src/openMP/: 01_HelloWorld.cpp  02_Integral.cpp
